# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missinglib--head--0.0
#

2004-08-06 21:51:28 GMT	John Goerzen <jgoerzen@complete.org>	patch-58

    Summary:
      Added new abspath and isdir functions to Unixutil
    Revision:
      missinglib--head--0.0--patch-58


    modified files:
     ChangeLog debian/changelog libsrc/unixutil/unixutil.ml
     libsrc/unixutil/unixutil.mli


2004-08-04 19:58:06 GMT	John Goerzen <jgoerzen@complete.org>	patch-57

    Summary:
      Added README
    Revision:
      missinglib--head--0.0--patch-57


    modified files:
     ChangeLog README


2004-08-04 19:54:26 GMT	John Goerzen <jgoerzen@complete.org>	patch-56

    Summary:
      Updated docs for new features
    Revision:
      missinglib--head--0.0--patch-56


    modified files:
     ChangeLog README debian/changelog debian/control


2004-08-04 19:51:23 GMT	John Goerzen <jgoerzen@complete.org>	patch-55

    Summary:
      Changed t to a virtual class
    Revision:
      missinglib--head--0.0--patch-55


    modified files:
     ChangeLog libsrc/anyDBM/anyDBM.ml libsrc/anyDBM/anyDBM.mli


2004-08-04 19:45:37 GMT	John Goerzen <jgoerzen@complete.org>	patch-54

    Summary:
      Renamed AnyDBM_Interface to AnyDBM
    Revision:
      missinglib--head--0.0--patch-54


    modified files:
     ChangeLog libsrc/Makefile libsrc/anyDBM/anyDBM.ml
     libsrc/anyDBM/anyDBM.mli libsrc/anyDBM/anyDBM_String.ml
     libsrc/anyDBM/anyDBM_String.mli

    renamed files:
     libsrc/anyDBM/anyDBM_Interface.ml
       ==> libsrc/anyDBM/anyDBM.ml
     libsrc/anyDBM/anyDBM_Interface.mli
       ==> libsrc/anyDBM/anyDBM.mli


2004-08-04 19:42:59 GMT	John Goerzen <jgoerzen@complete.org>	patch-53

    Summary:
      Updated docs
    Revision:
      missinglib--head--0.0--patch-53


    modified files:
     ChangeLog libsrc/anyDBM/anyDBM_Interface.mli
     libsrc/anyDBM/anyDBM_String.ml libsrc/anyDBM/anyDBM_String.mli

